RESOLVED FIXED256718
InteractionRegions: should not look for link ancestors if a button ancestor has been found
https://bugs.webkit.org/show_bug.cgi?id=256718
Summary InteractionRegions: should not look for link ancestors if a button ancestor h...
Etienne
Reported 2023-05-12 10:18:36 PDT
InteractionRegions: should not look for link ancestors if a button ancestor has been found
Attachments
Etienne
Comment 1 2023-05-12 10:35:38 PDT
Etienne
Comment 2 2023-05-12 10:36:04 PDT
EWS
Comment 3 2023-05-12 19:53:58 PDT
Committed 264041@main (9217f7af3356): <https://commits.webkit.org/264041@main> Reviewed commits have been landed. Closing PR #13816 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.