InteractionRegions: should not look for link ancestors if a button ancestor has been found https://bugs.webkit.org/show_bug.cgi?id=256718 <rdar://107958544>

Reviewed by Tim Horton.

Move all the `ancestorsOfType` matching to a single loop. Break when a
match is found.

* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::interactionRegionForRenderedRegion):

* LayoutTests/interaction-region/button-in-link-expected.txt: Added.
* LayoutTests/interaction-region/button-in-link.html: Added.
New test covering this change.

* LayoutTests/interaction-region/layer-tree-expected.txt:
* LayoutTests/interaction-region/paused-video-regions.html:
Test gardening.

Canonical link: https://commits.webkit.org/264041@main